deploy/egress/niche-foxnews-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: foxnews-ext-mesh
spec:
  hosts:
    - foxnews.com
  exportTo:
    - "."
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
